--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Check out my React rendered Résumé",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -14,7 +19,7 @@
     "cv",
     "resume",
     "html",
-	"css",
+    "css",
     "javascript",
     "react"
   ],
@@ -25,16 +30,11 @@
   },
   "homepage": "https://cezar-carneiro.github.io/resume",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.7"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
   }
 }
