--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Cezar Guimarães Carneiro",
+  "name": "Cezar Guimarães Carneiro - Software Engineer resume",
   "icons": [
     {
       "src": "favicon.ico",
