--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Cezar Guimar„es Carneiro",
-  "name": "Cezar Guimar„es Carneiro - Software Engineer resume",
+  "short_name": "Felipe Jos√© Balbino",
+  "name": "Felipe Jos√© Balbino - Software Engineer resume",
   "icons": [
     {
       "src": "favicon.ico",
